- Changed background color and color of nav item to be more visible - Updated position since there are now two buttons instead of one in multi-action - Fixed issue with exclamation not appearing due to not comparing accomplish_at with date today with time - Added basic crud for update and delete

--- a/assets/css/bootstrap_override.scss
+++ b/assets/css/bootstrap_override.scss
@@ -17,8 +17,8 @@
   border: none;
 
   .nav-item {
-    background: #eee;
-    color: #2db7d2;
+    background: #d3d3d3;
+    color: #2492a8;
     opacity: 0.5;
 
     &.active {
