--- a/assets/css/multi-action-container.scss
+++ b/assets/css/multi-action-container.scss
@@ -1,7 +1,11 @@
 .multi-action-container {
-  left: 40%;
+  left: 10%;
   position: absolute;
-  bottom: 10px;
+  bottom: 20px;
+
+  button {
+    width: 200px;
+  }
 
   .btn-primary {
     border-radius: 20px;
